force-app/main/default/objects/Opportunity/fields/AssesoriaCredito__c.field-meta.xml
<CustomField>
    <fullName>AssesoriaCredito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assesoria de Crédito da Oportunidade</description>
    <label>Assesoria de Crédito da Oportunidade</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>