force-app/main/default/objects/Opportunity/fields/Bloco__c.field-meta.xml
<CustomField>
    <fullName>Bloco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bloco</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>