force-app/main/default/objects/Opportunity/fields/CorretorCtt__c.field-meta.xml
<CustomField>
    <fullName>CorretorCtt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Corretor (Contato)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>