force-app/main/default/objects/Opportunity/fields/CotacaoSincronizada__c.field-meta.xml
<CustomField>
    <fullName>CotacaoSincronizada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotação sincronizada</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>