force-app/main/default/objects/Opportunity/fields/DataDeVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataDeVencimento__c</fullName>
    <label>Data de vencimento</label>
    <type>Date</type>
</CustomField>