force-app/main/default/objects/Opportunity/fields/Dias_Apos_Assinatura__c.field-meta.xml
<CustomField>
    <fullName>Dias_Apos_Assinatura__c</fullName>
    <description>Este campo servirá para armazenar a quantidade de dias a partir da data de assinatura do contrato que determina quando a Oportunidade deve ser considerada ganha.</description>
    <label>Dias após Assinatura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>