force-app/main/default/objects/Opportunity/fields/FarolChecklistDocumento__c.field-meta.xml
<CustomField>
    <fullName>FarolChecklistDocumento__c</fullName>
    <label>Farol Checklist Documentos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>