force-app/main/default/objects/Opportunity/fields/FarolDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>FarolDocumentacao__c</fullName>
    <formula>IMAGE(
    CASE(
        FarolChecklistDocumento__c,
        &quot;Verde&quot;, &quot;/img/icon/contract_line_item24.png&quot;,
        &quot;Azul&quot;, &quot;/img/icon/workOrderItem24.png&quot;,
        &quot;Vermelho&quot;, &quot;/img/samples/color_red.gif&quot;,
        &quot;&quot;
    ),
    &quot;Farol Documento&quot;,
    15,
    15
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farol Documentacao</label>
    <type>Text</type>
</CustomField>