force-app/main/default/objects/Opportunity/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <label>Motivo Do Cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motivo da desistência</fullName>
            </value>
            <value>
                <fullName>Aprovação de Crédito</fullName>
            </value>
            <value>
                <fullName>Oferta baixa</fullName>
            </value>
            <value>
                <fullName>Documentação incompleta</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>