force-app/main/default/objects/Opportunity/fields/MotivoDaDesistencia__c.field-meta.xml
<CustomField>
    <fullName>MotivoDaDesistencia__c</fullName>
    <label>Motivo da desistência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>