force-app/main/default/objects/Opportunity/fields/ProcessoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>ProcessoAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o registro está em status de aprovação</description>
    <label>Aprovação</label>
    <type>Checkbox</type>
</CustomField>