force-app/main/default/objects/Opportunity/fields/Sincronizado__c.field-meta.xml
<CustomField>
    <fullName>Sincronizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de checkbox para verificação da cotação caso ela esteja sincronizada</description>
    <label>Sincronizado</label>
    <type>Checkbox</type>
</CustomField>