force-app/main/default/objects/Opportunity/fields/TipoVenda__c.field-meta.xml
<CustomField>
    <fullName>TipoVenda__c</fullName>
    <label>Tipo De Venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negócio existente</fullName>
                <default>true</default>
                <label>Negócio existente</label>
            </value>
            <value>
                <fullName>Negócio novo</fullName>
            </value>
            <value>
                <fullName>Financiamento Bancário</fullName>
                <isActive>false</isActive>
                <label>Financiamento Bancário</label>
            </value>
            <value>
                <fullName>Financiamento Direto</fullName>
                <isActive>false</isActive>
                <label>Financiamento Direto</label>
            </value>
            <value>
                <fullName>Venda a Vista</fullName>
                <isActive>false</isActive>
                <label>Venda a Vista</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>