force-app/main/default/objects/Opportunity/fields/ValorFinal__c.field-meta.xml
<CustomField>
    <fullName>ValorFinal__c</fullName>
    <formula>IF(
  OR(
    ValorMulta__c &gt; 0,
    ValorJuros__c &gt; 0
  ), 
  Amount + ValorMulta__c + ValorJuros__c,
  Amount
  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor do produto com a multa e o juros incluso</inlineHelpText>
    <label>Valor Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>