force-app/main/default/objects/Opportunity/fields/ValorTotalComJuros__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalComJuros__c</fullName>
    <formula>IF(
    CloseDate &gt;= TODAY(),
    Amount * EXP(
        LN(1.01) * 
        ABS(FLOOR((TODAY() - CloseDate) / 30))
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acrescenta 1% ao mês do valor total</inlineHelpText>
    <label>Valor Total com Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>