force-app/main/default/objects/Opportunity/fields/ValorTotalComMulta__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalComMulta__c</fullName>
    <formula>Amount * 1.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acresenta 2% no valor do produto</inlineHelpText>
    <label>Valor Total com Multa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>