force-app/main/default/objects/Opportunity/validationRules/EditionRequiredGanho.validationRule-meta.xml
<ValidationRule>
    <fullName>EditionRequiredGanho</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(StageName), &quot;Ganho&quot;),
NOT(ISPICKVAL(StageName, &quot;Ganho&quot;))
)</errorConditionFormula>
    <errorMessage>Não é possível alterar a fase da oportunidade após o status for &apos;Ganho&apos;</errorMessage>
</ValidationRule>