force-app/main/default/objects/Opportunity/validationRules/ExibicaoDeMotivo.validationRule-meta.xml
<ValidationRule>
    <fullName>ExibicaoDeMotivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StatusDo1Pagamento__c, &quot;Desistência&quot;),
    ISBLANK(MotivoDaDesistencia__c)
)</errorConditionFormula>
    <errorMessage>O campo motivo da desistência se torna obrigatório quando o status do pagamento é desistência</errorMessage>
</ValidationRule>