force-app/main/default/objects/Opportunity/validationRules/PreenchimentoDeMotivo.validationRule-meta.xml
<ValidationRule>
    <fullName>PreenchimentoDeMotivo</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   AND(
   ISPICKVAL(StatusDo1Pagamento__c, &quot;Não Pago&quot;),
   NOT(ISBLANK(MotivoDaDesistencia__c))

 ), AND(
   ISPICKVAL(StatusDo1Pagamento__c, &quot;Pago&quot;),
    NOT(ISBLANK(MotivoDaDesistencia__c))
 )
)</errorConditionFormula>
    <errorDisplayField>MotivoDaDesistencia__c</errorDisplayField>
    <errorMessage>O campo motivo da desistência só pode ser preenchido quando o status do pagamento for desistência</errorMessage>
</ValidationRule>